# fbxc

./: CMakeLists.txt  FBX.cc  README.md  fips.yml  main_stub.cc
cmake/: find_fbxsdk.cmake
src/: CMakeLists.txt  FBX.cc  FBX.h  FBXDumper.cc  FBXDumper.h  JsonDumper.cc  JsonDumper.h  Log.h  Main.cc  Main.h  PropertyMap.cc  PropertyMap.h  ProxyBuilder.cc  ProxyBuilder.h  ProxyNode.h  ProxyObject.h  ProxyScene.h  Value.cc  Value.h
test_files/: cubeman.fbx  fbxsamples_license.txt  radonlabs_bouncingball.fbx  radonlabs_eagle.fbx  radonlabs_opelblitz.fbx  radonlabs_tiger.fbx  teapot.fbx  teapot_transparent.fbx  teapot_yellow.fbx
